Technical challenge submission for the hiring process
uses redux with a custom api middleware

includes a test setup with mocha, chai, enzyme and sinon

includes a dockerfile for development use:
docker run -p 8080:80 -v `pwd`/src:/home/pokemon/src --rm $(docker build -q .)
can get you started

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+  "env": {
+    "test": {
+      "plugins": [["webpack-alias", {"config": "webpack.config.js"}]]
+    }
+  },
   "presets": ["env", "react"],
   "plugins": ["transform-object-rest-spread"]
 }
